<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:touchscreenBlocksFocus="true"
    android:nestedScrollingEnabled="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TITLE"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="28dp">/">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SPOTIFYSTREAMER"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="30dp"
            android:id="@+id/button"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:background="#FF8040"
            android:layout_below="@+id/textView" />



        <Button
            android:layout_width="wrap_content"
            android:text="@string/SCORESAPP"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignEnd="@+id/button"
            android:background="#FF8040"
            android:layout_alignStart="@+id/button"
            android:textStyle="bold"
            android:layout_marginTop="14dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LIBRARYAPP"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/button3"
            android:layout_marginTop="14dp"
            android:layout_centerVertical="true"
            android:background="#FF8040"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BUILDITBIGGER"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="14dp"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:textStyle="bold"
            android:background="#FF8040"
            android:layout_alignEnd="@+id/button5" />


        <Button
            android:layout_width="wrap_content"
            android:text="@string/XYZREADER"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/button5"
            android:layout_below="@+id/button4"
            android:layout_marginTop="14dp"
            android:textStyle="bold"
            android:background="#FF8040"
            android:layout_alignEnd="@+id/button2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:text="@string/CAPSTONE"
            android:background="#FF0000"
            android:gravity="center"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp" />

    </TableLayout>


</RelativeLayout>
